# sctest

./: BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  grep_test_file  sct_tests.cmake
include/: sct_commands.h  sct_core.h  sct_example_plugin.h  sct_utils.h
src/: sct_commands.c  sct_core.c  sct_example_plugin.c  sct_utils.c  sctest_build_config.h.in  sctest_main.c
test/: test_sct_utils.c  test_sct_utils.h  test_sctest.c
